[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "BoringTun"
readme = "ReadMe.md"
description = "Python bindings to BoringTUN."
authors = [{name = "KOLANICH"}]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["BoringTun", "wireguard"]
license = {text = "Unlicense AND BSD-3-Clause"}
requires-python = ">=3.4"
dynamic = ["version"]

[project.optional-dependencies]
wg_conf = ["wg_conf"] # @ git+https://github.com/galenguyer/wg_conf.git

[project.urls]
Homepage = "https://codeberg.org/KOLANICH-libs/BoringTun.py"

[tool.setuptools]
packages = ["BoringTun"]
zip-safe = true

[tool.setuptools_scm]
